Reproduce "-XX:AOTMode=create" failing on openjdk-24